--- a/.github/workflows/build-tr3000.yml
+++ b/.github/workflows/build-tr3000.yml
@@ -21,11 +21,10 @@ jobs:
         run: |
           git clone https://git.openwrt.org/openwrt/openwrt.git
           cd openwrt
-          git branch -a
-          git tag
-          git checkout v24.10.0
-          echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main" >> "feeds.conf.default"
-          echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git;main" >> "feeds.conf.default"
+          git pull 
+          git checkout openwrt-24.10
+          sed -i '1isrc-git passwall_luci https://github.com/xiaorouji/openwrt-passwall.git;main' feeds.conf.default
+          sed -i '1isrc-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main' feeds.conf.default 
 
       - name: Update the feeds
         run: |
