--- a/.github/workflows/build-tr3000.yml
+++ b/.github/workflows/build-tr3000.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: build openwrt for tr3000
+    name: build immortalwrt for tr3000
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -15,70 +15,65 @@ jobs:
       - name: Install dependence
         env:
           DEBIAN_FRONTEND: noninteractive
-        run: sudo -E apt install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev file wget
+        run: sudo -E apt install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+  bzip2 ccache clang cmake cpio curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib \
+  g++-multilib git gnutls-dev gperf haveged help2man intltool lib32gcc-s1 libc6-dev-i386 libelf-dev \
+  libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses-dev libpython3-dev \
+  libreadline-dev libssl-dev libtool libyaml-dev libz-dev lld llvm lrzsz mkisofs msmtp nano \
+  ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip python3-ply python3-docutils \
+  python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig texinfo uglifyjs \
+  upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd
         
       - name: Clone openwrt source code
         run: |
-          git clone https://git.openwrt.org/openwrt/openwrt.git
-          cd openwrt
-          git pull 
-          git checkout openwrt-24.10
-          sed -i '1isrc-git passwall_luci https://github.com/xiaorouji/openwrt-passwall.git;main' feeds.conf.default
-          sed -i '1isrc-git passwall_packages https://github.com/xiaorouji/openwrt-passwall-packages.git;main' feeds.conf.default 
+          git clone -b openwrt-24.10 --single-branch --filter=blob:none https://github.com/immortalwrt/immortalwrt
+          cd immortalwrt
 
       - name: Update the feeds
         run: |
-          cd openwrt
+          cd immortalwrt
           ./scripts/feeds update -a
           ./scripts/feeds install -a
 
       - name: Copy config file
-        run: cp .config openwrt/
-
-      - name: make download
-        env:
-          FORCE_UNSAFE_CONFIGURE: 1
-        run: |
-          cd openwrt
-          make defconfig
-          make download
+        run: cp .config immortalwrt/
 
       - name: make
         env:
           FORCE_UNSAFE_CONFIGURE: 1
         run: |
-          cd openwrt
+          cd immortalwrt
           make -j8
           
       - name: Rename the default bin
         run: |
-          cd openwrt/bin/targets/mediatek/filogic/
-          mv openwrt-mediatek-filogic-cudy_tr3000-v1-squashfs-sysupgrade.bin openwrt-mediatek-filogic-cudy_tr3000-v1-squashfs-sysupgrade-default.bin
+          cd immortalwrt/bin/targets/mediatek/filogic/
+          mv immortalwrt-mediatek-filogic-cudy_tr3000-v1-ubootmod-squashfs-sysupgrade.itb immortalwrt-mediatek-filogic-cudy_tr3000-v1-ubootmod-squashfs-sysupgrade-default.itb
 
       - name: apply and apply patch
         env:
           FORCE_UNSAFE_CONFIGURE: 1
         run: |
-          cd openwrt
+          cd immortalwrt
           git apply ../patches/112m.patch
           make -j8
 
       - name: Rename the 112M bin
         run: |
-          cd openwrt/bin/targets/mediatek/filogic/
-          mv openwrt-mediatek-filogic-cudy_tr3000-v1-squashfs-sysupgrade.bin openwrt-mediatek-filogic-cudy_tr3000-v1-squashfs-sysupgrade-112M.bin
+          cd immortalwrt/bin/targets/mediatek/filogic/
+          mv immortalwrt-mediatek-filogic-cudy_tr3000-v1-ubootmod-squashfs-sysupgrade.itb immortalwrt-mediatek-filogic-cudy_tr3000-v1-ubootmod-squashfs-sysupgrade-112M.itb          
         
       - name: zip the bin
         uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r openwrt-tr3000.zip openwrt/bin
+          args: zip -qq -r immortalwrt-2410.zip immortalwrt/bin
 
       - name: Release and Upload
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: openwrt-tr3000.zip
+          files: immortalwrt-2410.zip
           
       - name: Delete workflow runs
         uses: Mattraks/delete-workflow-runs@main
